[gd_scene load_steps=7 format=3 uid="uid://b37wk5d51d17d"]

[ext_resource type="Script" path="res://Sprinkler.gd" id="1_jfygh"]
[ext_resource type="Texture2D" uid="uid://dtemd54255kfj" path="res://graphics/buloslaw_top.png" id="2_wibin"]
[ext_resource type="AudioStream" uid="uid://bpsh0127gwkm" path="res://Sounds/coin.wav" id="3_t3qxh"]
[ext_resource type="AudioStream" uid="uid://cpcsncf6fqhpc" path="res://Sounds/sprinkler-death.wav" id="4_1611p"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o34re"]
playback_mode = 1
random_pitch = 1.3
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("4_1611p")
stream_0/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c1uuu"]
radius = 25.0

[node name="Sprinkler" type="StaticBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 30
script = ExtResource("1_jfygh")

[node name="Picture" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Picture"]
scale = Vector2(0.025, 0.025)
texture = ExtResource("2_wibin")

[node name="DropMarker" type="Marker2D" parent="Picture"]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_t3qxh")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_o34re")
volume_db = -4.752
pitch_scale = 0.68

[node name="SplashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_t3qxh")

[node name="SplashTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c1uuu")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="SplashTimer" to="." method="_on_splash_timer_timeout"]
